--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         mavenCentral()
         // 哔哩哔哩弹幕库
         jcenter()
+        mavenCentral()
     }
 
     dependencies {
@@ -27,6 +28,7 @@ allprojects {
         mavenCentral()
         // 哔哩哔哩弹幕库
         jcenter()
+        mavenCentral()
     }
 }
 
@@ -84,7 +86,10 @@ android {
 }
 dependencies {
     implementation "org.apache.commons:commons-collections4:4.4"
+    implementation 'com.google.code.gson:gson:2.9.1'
     // 哔哩哔哩弹幕库
     implementation 'com.github.ctiao:DanmakuFlameMaster:0.9.25'
     implementation 'com.github.ctiao:ndkbitmap-armv7a:0.9.24'
+
+    implementation 'com.kuaishou:akdanmaku:1.0.3'
 }
